Update references with most/all packages used

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -5,7 +5,31 @@
     note = {Accessed on October 2024},
     url = {https://projects.fivethirtyeight.com/polls/president-general/2024/national/},
 }
-  
+
+@article{Stantcheva,
+  author       = {Stefanie Stantcheva},
+  title        = {How to Run Surveys: A Guide to Creating Your Own Identifying Variation and Revealing the Invisible},
+  journal      = {Annual Review of Economics},
+  year         = {2023},
+  volume       = {15},
+  pages        = {443--480},
+  doi          = {10.1146/annurev-economics-090122-040538},
+  url          = {https://www.annualreviews.org/doi/10.1146/annurev-economics-090122-040538},
+  institution  = {Department of Economics, Harvard University},
+}
+
+@inproceedings{Sklearn,
+  author    = {Lars Buitinck and Gilles Louppe and Mathieu Blondel and
+                Fabian Pedregosa and Andreas Mueller and Olivier Grisel and
+                Vlad Niculae and Peter Prettenhofer and Alexandre Gramfort
+                and Jaques Grobler and Robert Layton and Jake VanderPlas and
+                Arnaud Joly and Brian Holt and Ga{\"{e}}l Varoquaux},
+  title     = {{API} design for machine learning software: experiences from the scikit-learn
+                project},
+  booktitle = {ECML PKDD Workshop: Languages for Data Mining and Machine Learning},
+  year      = {2013},
+  pages = {108--122},
+}
 @book{Python,
  author = {Van Rossum, Guido and Drake, Fred L.},
  title = {Python 3 Reference Manual},
@@ -52,3 +76,41 @@
     title = {seaborn: statistical data visualization},
     journal = {Journal of Open Source Software}
  }
+ @Article{Numpy,
+ title         = {Array programming with {NumPy}},
+ author        = {Charles R. Harris and K. Jarrod Millman and St{\'{e}}fan J.
+                 van der Walt and Ralf Gommers and Pauli Virtanen and David
+                 Cournapeau and Eric Wieser and Julian Taylor and Sebastian
+                 Berg and Nathaniel J. Smith and Robert Kern and Matti Picus
+                 and Stephan Hoyer and Marten H. van Kerkwijk and Matthew
+                 Brett and Allan Haldane and Jaime Fern{\'{a}}ndez del
+                 R{\'{i}}o and Mark Wiebe and Pearu Peterson and Pierre
+                 G{\'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and
+                 Warren Weckesser and Hameer Abbasi and Christoph Gohlke and
+                 Travis E. Oliphant},
+ year          = {2020},
+ month         = sep,
+ journal       = {Nature},
+ volume        = {585},
+ number        = {7825},
+ pages         = {357--362},
+ doi           = {10.1038/s41586-020-2649-2},
+ publisher     = {Springer Science and Business Media {LLC}},
+ url           = {https://doi.org/10.1038/s41586-020-2649-2}
+}
+
+@misc{Tabulate,
+  author       = {Sergey A. Korolev},
+  title        = {tabulate: Pretty-print tabular data in Python},
+  year         = {2023},
+  note         = {Version 0.9.0},
+  url          = {https://pypi.org/project/tabulate/},
+}
+
+@misc{Jupyter,
+  author       = {Project Jupyter},
+  title        = {Jupyter: Open source tools for interactive computing},
+  year         = {2023},
+  note         = {Available at https://jupyter.org},
+  url          = {https://jupyter.org},
+}
